@@ -565,3 +565,6 @@ com.openexchange.groupware.update.tasks.DeleteOldYahooSubscriptions
 
 # Adds (cid,changing_date) index to calendar tables if missing
 !com.openexchange.groupware.update.tasks.CalendarAddChangingDateIndexTask
+
+# Checks and drops obsolete tables possibly created for managing POP3 accounts
+!com.openexchange.groupware.update.tasks.POP3CheckAndDropObsoleteTablesTask
