@@ -1,6 +1,7 @@
 * 2014-05-20 - thorben.betten@open-xchange.com
 
  - Fix for bug 28175: Tag wording for detected configuration flaws explicitly as "Warning"
+ - Fix for bug 32633: Drop all remnants for obsolete POP3 tables
 
 * 2014-05-19 - thorben.betten@open-xchange.com
 
